--- a/media/style.css
+++ b/media/style.css
@@ -100,11 +100,11 @@ body {
     height: 125px;    
 }
 
-.block.memory .values {
-	height: 222px;
+.block.instructions .values .active {
+	background-color: rgba(0, 0, 0, 0.2);
 }
 
-.block .instructions .active {
-	background-color: rgba(0, 0, 0, 0.2);
+.block.memory .values {
+	height: 222px;
 }
 
