--- a/media/style.css
+++ b/media/style.css
@@ -6,31 +6,13 @@ body {
 	background: -webkit-gradient(linear, left bottom, left top, color-stop(0.002, rgb(46,50,51)), color-stop(0.5, rgb(88,96,99)), to(rgb(46,50,51)));
 	background-color: rgb(46,50,51);
 	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
-	font-size: 0.9em;
+	font-size: 0.75em;
 	color: #fff;
+	background-image: url("memory.png");
+	background-position: center center;
+	background-repeat: no-repeat;
 }
 
-.cpu:after {
-	content:"";
-	position:absolute;
-	z-index: -1;
-	top: 7px;
-	left: 7px;
-	right: 7px;
-	bottom: 7px;
-	border: 3px solid rgba(3, 32, 14, 0.6);
-}
-
-.cpu:before {
-	content:"";
-	position:absolute;
-	z-index: -1;
-	top: 10px;
-	left: 10px;
-	right: 10px;
-	border: 1px solid #65b985;
-	border-width: 1px 0 0 0;
-}
 
 .cpu {
 	position: absolute;
@@ -43,13 +25,6 @@ body {
 	top: 50%;
 	height: 580px;
 	margin-top: -300px;
-	
-	-webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.5);
-	box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.5);
-	background: -webkit-gradient(linear, left bottom, left top, from(rgb(12, 55, 28)), to(rgb(52,135,82)));
-	background-color: #348752;
-	
-	padding: 10px;
 }
 
 .cpu a {
@@ -66,23 +41,21 @@ body {
 
 .left {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 45px;
+    left: 60px;
     width: 258px;
 }
 
 .right {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 45px;
+    right: 2px;
 }
 
 .block {
-    border: 1px solid;
-    border-color: rgba(101, 185, 133, 0.2) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(101, 185, 133, 0.2);
-    padding: 20px 0 10px 20px;
+    position: relative;
+    padding-bottom: 25px;
 }
-
 
 .block .titles {
     width: 130px;
@@ -90,13 +63,12 @@ body {
 }
 
 .block h2 {
-    width: 88px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 }
 
 .block .values {
 	overflow: auto;
-	width: 300px;
+	width: 255px;
 }
 
 .values li {
