--- a/media/style.css
+++ b/media/style.css
@@ -96,3 +96,16 @@ body {
 	height: 216px;
 }
 
+.footer {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    width: 200px;
+    text-align: center;
+    margin-left: -100px;
+}
+
+.footer,
+.footer a {
+    color: #666;
+}
